--- a/src/app/shared/prompt-content-shared/prompt-content-shared.component.css
+++ b/src/app/shared/prompt-content-shared/prompt-content-shared.component.css
@@ -24,6 +24,20 @@
   height: 60px;
 }
 
+
+.overlay-actions .btn.add {
+  background-color: transparent;
+  color: green;
+  border: 2px solid transparent;
+}
+
+.overlay-actions .btn.add:hover {
+  background-color: green;
+  color: white;
+  transform: translateY(-2px);
+}
+
+
 .textarea-input-bar {
   width: 100%;
   max-height: 150px;
